# zl_serialport_plus

./: build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zl/zl_serialport_plus/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/zl/zl_serialport_plus/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
serialportlib/: CMakeLists.txt  build.gradle
serialportlib/src/androidTest/java/com/zl/serialportlib/: ExampleInstrumentedTest.java
serialportlib/src/main/java/com/zl/serialportlib/: ByteUtils.java  SerialPort.java  SerialPortFinder.java
serialportlib/src/test/java/com/zl/serialportlib/: ExampleUnitTest.java
